[package]
name = "bbwtconstr"
version = "0.1.0"
authors = ["Dominik Köppl <dominik.koeppl@uni-dortmund.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte_string = "1.0.0"
more-asserts = "0.2.1"
rand = "0.8.1"
bit-vec = "0.6.3"
succinct = "0.5.2"
