[package]
name = "bbwtconstr"
version = "0.1.0"
authors = ["Dominik Köppl <dominik.koeppl@uni-dortmund.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
more-asserts = "0.2.1"
log = "0.4.0"
env_logger = "0.8.3"
clap = { version = "3.2.16", features = ["derive"] }
